Added logical border

--- a/writing-modes/index.html
+++ b/writing-modes/index.html
@@ -25,12 +25,20 @@
     color: red;
     writing-mode: vertical-rl;
   }
+  .title-s-lr {
+    writing-mode: sideways-lr;
+  }
+  .title-s-rl {
+    writing-mode: sideways-rl;
+  }
 </style>
 <body>
   <blockquote dir="auto">Quotation in English</blockquote>
   <blockquote dir="auto">اقتباس في العربية</blockquote>
   <h1 class="title-h-tb">HORIZONTAL <br> TOP TO BOTTOM</h1>
-  <h1 class="title-v-lr">VERTICAL <br> LEFT TO RIGHT</h1>
+  <h1 class="title-v-lr">VERTICAL <br> LEFT TO RIGHT</h1> 
   <h1 class="title-v-rl">VERTICAL <br> RIGHT TO LEFT</h1>
+  <h1 class="title-s-lr">SIDEWAY <br> LEFT TO RIGHT</h1>
+  <h1 class="title-s-rl">SIDEWAY <br> RIGHT TO LEFT</h1>
 </body>
 </html>
